# ImPlatform

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_web.ps1  run_web.ps1
.github/: FUNDING.yml
.github/workflows/: build.yml
ImPlatform/: ImPlatform.cpp  ImPlatform.h  ImPlatformBackend.h  ImPlatformPlatform.h  ImPlatform_Internal.h  ImPlatform_app_apple.mm  ImPlatform_app_glfw.cpp  ImPlatform_app_sdl2.cpp  ImPlatform_app_sdl3.cpp  ImPlatform_app_win32.cpp  ImPlatform_gfx_dx10.cpp  ImPlatform_gfx_dx11.cpp  ImPlatform_gfx_dx12.cpp  ImPlatform_gfx_dx9.cpp  ImPlatform_gfx_metal.mm  ImPlatform_gfx_opengl3.cpp  ImPlatform_gfx_vulkan.cpp  ImPlatform_gfx_vulkan.cpp.backup  ImPlatform_gfx_wgpu.cpp  ImPlatform_titlebar.cpp  implatform_impl_dx11.cpp  implatform_impl_dx12.cpp  implatform_impl_glfw.cpp  implatform_impl_opengl3.cpp  implatform_impl_vulkan.cpp  implatform_impl_win32.cpp
ImPlatformDemo/: ImPlatformDemo.sln  ImPlatformDemo.vcxproj  ImPlatformDemo.vcxproj.filters  imgui.ini  main.cpp  shader_ps.hlsl
ImPlatformDemo/WorkingDir/shaders/glsl/: arrow_shape.glsl  default.glsl  default_vs.glsl  linear_gradient_ps.glsl  linear_gradient_vs.glsl  rotated_square.glsl  rotated_square_vs.glsl
ImPlatformDemo/WorkingDir/shaders/hlsl_src/: arrow_shape.hlsl  default.hlsl  linear_gradient.hlsl  rotated_square.hlsl
ImPlatformDemo/WorkingDir/shaders/msl/: arrow_shape_ps.msl  arrow_shape_vs.msl  default_ps.msl  default_vs.msl  linear_gradient_ps.msl  linear_gradient_vs.msl  rotated_square_ps.msl  rotated_square_vs.msl
ImPlatformDemo/WorkingDir/shaders/wgpu/: arrow_shape_ps.wgpu  default_ps.wgpu  linear_gradient_ps.wgpu  rotated_square_ps.wgpu  rotated_square_vs.wgpu
ImPlatformDemo/WorkingDir/shaders/wgsl/: arrow_shape_ps.wgsl  default_ps.wgsl  linear_gradient_ps.wgsl  linear_gradient_vs.wgsl  rotated_square_ps.wgsl
ImPlatformDemo/shaders/: README.md  arrow_sdf.frag  arrow_sdf.frag.h  arrow_sdf.frag.spv  arrow_sdf.vert.h  arrow_sdf_vert.h  compile_shaders.bat  compile_shaders.py  gradient.frag  gradient.frag.h  gradient.frag.spv  gradient.vert  gradient.vert.h  gradient.vert.spv  spv_to_header.sh
sharpmake/: implatform.sharpmake.cs  main.sharpmake.cs
web/: index.js  index.wasm
